# improved-path-guiding

./: .gitignore
mitsuba/: .gitignore  CMakeLists.txt  README.md
mitsuba/data/cmake/: MitsubaConfigLinux.cmake
mitsuba/include/mitsuba/converter/: converter.h
mitsuba/include/mitsuba/core/: statistics.h  vector.h
mitsuba/include/mitsuba/guiding/: bstree.h  common.h  data.h  guidedbsdf.h  guiding.h  kdtree.h  samplingfraction.h  vmm.h
mitsuba/include/mitsuba/render/: bsdf.h
mitsuba/src/: CMakeLists.txt
mitsuba/src/bsdfs/: CMakeLists.txt  blendbsdf.cpp  bumpmap.cpp  coating.cpp  conductor.cpp  dielectric.cpp  difftrans.cpp  diffuse.cpp  hk.cpp  irawan.cpp  mask.cpp  mixturebsdf.cpp  normalmap.cpp  null.cpp  phong.cpp  plastic.cpp  roughcoating.cpp  roughconductor.cpp  roughdielectric.cpp  roughdiffuse.cpp  roughplastic.cpp  thindielectric.cpp  twosided.cpp  ward.cpp
mitsuba/src/emitters/: CMakeLists.txt
mitsuba/src/films/: CMakeLists.txt
mitsuba/src/integrators/: CMakeLists.txt
mitsuba/src/integrators/guiding/: guidedpath.cpp
mitsuba/src/libbidir/: CMakeLists.txt
mitsuba/src/libconverter/: CMakeLists.txt  collada.cpp  converter.cpp  obj.cpp
mitsuba/src/libcore/: CMakeLists.txt  statistics.cpp  tls.cpp
mitsuba/src/libhw/: CMakeLists.txt
mitsuba/src/libpython/: CMakeLists.txt
mitsuba/src/librender/: CMakeLists.txt  bsdf.cpp
mitsuba/src/medium/: CMakeLists.txt
mitsuba/src/mitsuba/: CMakeLists.txt  mtsimport.cpp
mitsuba/src/mtsgui/: CMakeLists.txt  sceneimporter.h
mitsuba/src/phase/: CMakeLists.txt
mitsuba/src/rfilters/: CMakeLists.txt
mitsuba/src/samplers/: CMakeLists.txt
mitsuba/src/sensors/: CMakeLists.txt
mitsuba/src/shapes/: CMakeLists.txt
mitsuba/src/subsurface/: CMakeLists.txt
mitsuba/src/tests/: CMakeLists.txt
mitsuba/src/textures/: CMakeLists.txt
mitsuba/src/utils/: CMakeLists.txt
mitsuba/src/volume/: CMakeLists.txt
scenes/: .gitignore  README.md
scenes/bathroom/: bathroom_ref.exr  scene.xml  simple.xml
scenes/cbox_with_bulb/: scene.xml  simple.xml
scenes/clocks/: scene.xml  simple.xml
scenes/country_kitchen/: scene.xml  simple.xml
scenes/glass_of_milk/: scene.xml  simple.xml
scenes/glass_of_water/: scene.xml  simple.xml
scenes/jewelry/: scene.xml  simple.xml
scenes/kitchen/: scene.xml
scenes/kitchenette/: kitchenette_ref.exr  scene.xml  simple.xml
scenes/kitchenette/meshes/: kitchen.serialized
scenes/kitchenette/textures/: skydome.exr
scenes/living_room/: scene.xml  simple.xml
scenes/torus/: scene.xml  simple.xml
